--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -4,23 +4,4 @@
   <%= link_to("Back", "/pictures/#{@picture.id}") %>
 </p>
 
-<%= form_for(@picture, url: "/pictures/#{@picture.id}") do |f| %>
-  <p>
-    <%= f.label :artist %><br>
-    <%= f.text_field :artist %>
-  </p>
-
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
-
-  <p>
-    <%= f.label :url %><br>
-    <%= f.text_field :url %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-<% end -%>
+<%= render 'form', picture: @picture %>
