--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,3 +1,10 @@
-<%= link_to("Back to Pictures", "/pictures") %> | <%= link_to("Edit", "/pictures/#{@picture.id}/edit") %> | <%= link_to("Delete", "/pictures/#{@picture.id}", method: :delete, data: {confirm: "Are you sure you want to delete this picture?"}) %>
-<p><%= @picture.title %>, <%= @picture.artist %></p>
+<h2><%= @picture.title %> by <%= @picture.artist %></h2>
+
+
+<%= link_to("Back to Pictures", "/pictures") %>
+
+<% if current_user && current_user == @picture.user %>
+  <%= link_to("Edit", "/pictures/#{@picture.id}/edit") %> | <%= link_to("Delete", "/pictures/#{@picture.id}", method: :delete, data: {confirm: "Are you sure you want to delete this picture?"}) %>
+<% end -%>
+
 <%= image_tag(@picture.url) %>
